# InterviewProject

./: .gitignore  SECURITY.md
frontend/src/: styles.css
frontend/src/components/: Sidebar.tsx  StatusBadge.tsx
frontend/src/lib/: auth.ts
frontend/src/routes/: __root.tsx  index.tsx  login.tsx
proxy/: config.py  main.py  models.py  pyproject.toml
proxy/normalizers/: __init__.py  atlas.py  beacon.py  cobalt.py
proxy/providers/: __init__.py  atlas.py  beacon.py  cobalt.py
proxy/routes/: __init__.py  auth.py  employees.py
proxy/security/: __init__.py  auth.py  errors.py  logging_config.py  rate_limit.py
proxy/services/: __init__.py  aggregator.py  cache.py  dedup.py  filtering.py
proxy/tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_dedup.py  test_filtering.py  test_normalizers.py  test_providers.py  test_security.py
