[project]
name = "proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
# auto: async test functions run without needing a per-test @mark.asyncio.
asyncio_mode = "auto"
# Put proxy/ on sys.path so tests import top-level modules (config, main,
# providers.*, normalizers.*) the same way the app does at runtime.
pythonpath = ["."]
testpaths = ["tests"]
